Skip to content

Small UI glitch

If you open random video file in VLC, close it and then re-open standalone empty player (not skinned version) you will see a small UI glitch. (picture in attachment)

Under menu bar is visible black line because of badly resized VLC window. You can fix it easily by dragging window border with mouse, but IMO should by default empty player always open correctly resized window without that black line.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information