Qt4: fix a minor (but annoying) UI glitch on restart

Close #4041